<resources>
    <string name="app_name">BattleshipClient</string>
    <string name="title_activity_board_arrange">BoardArrange</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Strings related to activities -->
    <string name="gameTitle">BATTLESHIP</string>
    <string name="Enter">ENTER</string>
    <string name="welcome">"Welcome!"</string>
    <string name="i_m_ready">Ready to Play</string>
    <string name="place_your_fleet">Place your fleet</string>
    <string name="quit">QUIT APP</string>
    <string name="start_playing">START PLAYING</string>
    <string name="watch_leaderboard">WATCH LEADERBOARD</string>
    <string name="choose_option">WHAT WOULD YOU LIKE TO DO?</string>
    <string name="toggleMusic">toggleMusic</string>
    <string name="Your_Inventory">Your Inventory:</string>
    <string name="room_card_user_name">user_name</string>
    <string name="rooms_activity_title">Choose A Room</string>
    <string name="your_turn">Your Turn</string>
    <string name="hint_password">Password</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="hint_user_name">User Name</string>
    <string name="activity_title_sign_up_sign_in">SIGN UP / SIGN IN</string>
    <string name="todo_miss_view">miss view</string>
    <string name="frame_ships_content_description">frame</string>
    <string name="inventory_ships_content_description">inventory</string>


    <string name="instructions1">
        Battleship is a two-player game where players attempt to sink each others fleet of ships.\n\n
        That is done by guessing their locations on a grid.\n
        Each player has a fleet of 5 ships and a 10x10 grid ,on which to place them.\n\n

        The objective is to sink all of your opponent ships before they sink all of yours.\n\n

        Start the Game:\n\n
        On pressing "Start Playing" button, the server will match you with another player.\n
        Drag your ships to the grid to place them.\n
        Changing ship orientation is achieved by clicking on it.\n\n

        Rules for placing your ships:\n
        1.Ships can be placed horizontally or vertically but not diagonally.\n\n
        2.Ships are not allowed to overlap or be adjacent to each other.\n\n
        3.ships must not go off the edge of the board.\n\n
        </string>

    <string name="instructions2">
        Playing the Game:\n\n
        1. Players attack by touching out a location the grid.\n
        2. If the location contains a ship, it is a hit.\n
        3. If the location does not contain a ship, it is a miss.\n
        4. The first player to sink all of their opponent ships wins.\n\n

        you score higher if you sink your opponent ships in fewer moves.\n\n\n
        have fun playing the game!\n\n\n\n\n
    </string>
</resources>