<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_up_in_img"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.activities.SignUpSignInActivity">

    <include layout="@layout/item_button_toggle_music" />

    <TextView
        android:id="@+id/signUpInTitleId"
        style="@style/LargeTextViewAppearance"
        android:layout_width="0dp"
        android:layout_height="78dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:text="@string/activity_title_sign_up_sign_in"
         app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameInputViewId"
        android:layout_width="335dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:cursorVisible="true"
        android:hint="@string/hint_user_name"
        android:imeOptions="actionDone"
        android:maxLength="12"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpInTitleId"
        tools:includeFontPadding="true" />

    <EditText
        android:id="@+id/userPasswordInputViewId"
        android:layout_width="335dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:cursorVisible="true"
        android:hint="@string/hint_password"
        android:imeOptions="actionDone"
        android:maxLength="8"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameInputViewId" />

    <Button
        android:id="@+id/signUpBtnId"
        style="@style/ButtonTextAppearance"
        android:layout_width="203dp"
        android:layout_height="60dp"
        android:layout_marginTop="164dp"
        android:background="@drawable/custom_navigation_button_background"
        android:onClick="goToOptionsActivity"
        android:text="@string/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPasswordInputViewId"
        />

    <Button
        android:id="@+id/signInBtnId"
        style="@style/ButtonTextAppearance"
        android:layout_width="203dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_navigation_button_background"
        android:onClick="goToOptionsActivity"
        android:text="@string/sign_in_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtnId"
        />

</androidx.constraintlayout.widget.ConstraintLayout>