<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea_water_background">


    <include
        android:id="@+id/include"
        layout="@layout/item_button_toggle_music" />


    <TextView
        android:id="@+id/placeFleet"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="48dp"
        android:text="@string/place_your_fleet"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:autoSizeMaxTextSize="50sp"
        app:autoSizeMinTextSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/currPlayerBoardGridId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:numColumns="10"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeFleet" />

    <FrameLayout
        android:id="@+id/shipsFrameLayoutId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeFleet">

        <ImageView
            android:id="@+id/ship_length5_onGrid_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ship_length5"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/ship_length4_onGrid_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ship_length4"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/ship_length3_1_onGrid_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ship_length3_1"
            android:visibility="invisible"/>


        <ImageView
            android:id="@+id/ship_length3_2_onGrid_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ship_length3_2"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/ship_length2_onGrid_id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ship_length2"
            android:visibility="visible"/>

    </FrameLayout>
    <TextView
        android:id="@+id/shipInventoryTxtId"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/Your_Inventory"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currPlayerBoardGridId" />

    <LinearLayout
        android:id="@+id/shipsInventoryId"
        android:layout_width="410dp"
        android:layout_height="176dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ReadyBtnId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipInventoryTxtId">

        <ImageView
            android:id="@+id/ship_length5_id"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:src="@drawable/ship_length5" />

        <ImageView
            android:id="@+id/ship_length4_id"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ship_length4"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/ship_length3_1_id"
            android:layout_width="46dp"
            android:layout_height="115dp"
            android:src="@drawable/ship_length3_1"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/ship_length3_2_id"
            android:layout_width="54dp"
            android:layout_height="111dp"
            android:src="@drawable/ship_length3_2" />

        <ImageView
            android:id="@+id/ship_length2_id"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:src="@drawable/ship_length2" />

        <ImageButton
            android:id="@+id/resetShipsID"
            android:layout_width="54dp"
            android:layout_height="55dp"
            android:paddingLeft="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/outline_directory_sync_24" />

        <!-- Add more ships as needed -->
    </LinearLayout>

    <Button
        android:id="@+id/ReadyBtnId"
        android:layout_width="295dp"
        android:layout_height="59dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/navy"
        android:fontFamily="monospace"
        android:onClick="goToActivePlayActivity"
        android:text="@string/i_m_ready"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shipsInventoryId"
        app:layout_constraintVertical_bias="0.677"
        app:strokeColor="#0C0C75"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>